--- a/www/index.html
+++ b/www/index.html
@@ -12,6 +12,7 @@
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
     <!-- your app's js -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.9.3/lodash.min.js"></script>
     <script src="js/app.js"></script>
   </head>
   <body ng-app="earlybird">
