--- a/www/index.html
+++ b/www/index.html
@@ -15,7 +15,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.9.3/lodash.min.js"></script>
     <script src="js/app.js"></script>
   </head>
-  <body ng-app="earlybird">
+  <body ng-app="earlybird" ng-controller="SessionCtrl">
 
 
     <ion-pane>
