--- a/www/index.html
+++ b/www/index.html
@@ -10,12 +10,15 @@
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <!-- cordova script (this will be a 404 during development) -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.6/angular-cookies.min.js"></script>
     <script src="cordova.js"></script>
-    <!-- your app's js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.9.3/lodash.min.js"></script>
+    <!-- your app's js -->
+    <script src="js/services.js"></script>
     <script src="js/app.js"></script>
   </head>
-  <body ng-app="earlybird" ng-controller="SessionCtrl">
+  <body ng-app="earlybird">
 
 
     <ion-pane>
