chore(conrollers): moved controllers to sep file

--- a/www/index.html
+++ b/www/index.html
@@ -15,6 +15,7 @@
     <script src="cordova.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.9.3/lodash.min.js"></script>
     <!-- your app's js -->
+    <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
     <script src="js/app.js"></script>
   </head>
