--- a/www/index.html
+++ b/www/index.html
@@ -19,7 +19,7 @@
     <script src="js/services.js"></script>
     <script src="js/app.js"></script>
   </head>
-  <body ng-app="earlybird">
+  <body ng-cloak ng-app="earlybird">
 
 
     <ion-pane>
