--- a/www/index.html
+++ b/www/index.html
@@ -14,6 +14,7 @@
     <script src="https://maps.googleapis.com/maps/api/js?libraries=places"></script>
     <script src="lib/angular-google-places-autocomplete/src/autocomplete.js"></script>
     <link href="lib/angular-google-places-autocomplete/src/autocomplete.css" rel="stylesheet">
+    <script src="lib/angular-ui-mask/dist/mask.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.9.3/lodash.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.3/moment.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.4.0/moment-timezone-with-data-2010-2020.min.js"></script>
